--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-  <h1>gatti</h1> 
-  <p>hfhfnfj</p>
-  <h2>simba</h2>
-  <h3>titolo 3</h3>
-  <p>bla bla bla</p>
-  <img src="gatto-vita.jpg" alt="">
+  <header>
+    <h1>opere</h1>
+    <nav>
+        <a href="index.html">home</a>
+        <a href="opere.html">opere</a>
+    
+    </nav>
+        </header>
+        <main>
+          <h1>gatti</h1> 
+          <p>hfhfnfj</p>
+          <h2>simba</h2>
+          <h3>titolo 3</h3>
+          <p>bla bla bla</p>
+          <img src="gatto-vita.jpg" alt="">
+        </main>
+        <footer>
+    
+        </footer>
+
 </body>
 </html>
