--- a/opere.html
+++ b/opere.html
@@ -17,6 +17,7 @@
     </header>
     <main>
 <canvas style="border-style: solid;" id="foglio" class="foglio" width="500" height="500"></canvas>
+<canvas style="border-style: solid;" id="foglio2" class="foglio" width="500" height="500"></canvas>
     </main>
     <footer>
 
