--- a/index.html
+++ b/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-  <header>
-    <h1>opere</h1>
-    <nav>
-        <a href="index.html">home</a>
-        <a href="opere.html">opere</a>
-    
-    </nav>
-        </header>
-        <main>
-          <h1>gatti</h1> 
-          <p>hfhfnfj</p>
-          <h2>simba</h2>
-          <h3>titolo 3</h3>
-          <p>bla bla bla</p>
-          <img src="gatto-vita.jpg" alt="">
-        </main>
-        <footer>
-    
-        </footer>
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <header class="ciao">
+    <h1>GALLERIA D'ARTE</h1>
+    <h1>MONTALE</h1>
+    <nav>
+      <a class="home" href="/index.html">home</a>
+      <a class="home" href="/opere.html">opere</a>
+    </nav>
+  </header>
+
+  <main class="introduzione">
+    <h2>biografia degli artisti</h2>
+    <div>
+      <h3>nicolo burlando</h3>
+      <img width="300" src="PHOTO-2024-11-06-12-45-19.jpg" alt="">
+      <p>l'artista nicolo burlando è nato a genova il 23 febbraio gioca a basket da 6 anni nel meeting e va a scuola al montale.</p>
+      <a href="https://www.google.it/">google</a>
+
+    </div>
+    <div>
+      <h3>Giulia Giannone</h3>
+      <img width="300" src="Screenshot_20241108_124346_Google.jpg" alt="">
+      <p>Giulia Giannone è nata a genova il 17 marzo 2010, gioca tennis e va a scuola al montale. Sono una ragzza introversa, simpatica, a cui piace viaggiare e un giorno vorrei visitare New York. </p>
+      <a href="https://www.google.it/">google</a>
+    </div>
+    <div>
+      <h3>Amelia Mantovani</h3>
+      <img width="300" src="IMG_20240626_171401_533.jpg" alt="">
+      <p>Amelia Mantovani è nata a Genova il 27 settembre 2010, fa pattinaggio da 4 anni e hip hop da 2 anni e va a scuola al Montale. Sono una ragzza vivace, empatica, timida e molto sportiva. Sono una ragazza a cui piace guardare le serie tv e a cui piace andare in vacanza. </p>
+      <a href="https://www.google.it/">google</a>
+    </div>
+      <footer>
+        <h1></h1>
+      </footer>
 </body>
-</html>
+</body
